# goit-web-homework-14

./: docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
migrations/: env.py
migrations/versions/: 078eeab268bd_init.py  56ee11cb5bc7_init.py
src/: schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
